syntax = "proto3";

package product;

option go_package = "github.com/example/catalog-mgmt-app/proto";

service ProductService {
  rpc CreateProduct (CreateProductRequest) returns (ProductResponse);
  rpc GetProduct (GetProductRequest) returns (ProductResponse);
}

message CreateProductRequest {
  string name = 1;
  double price = 2;
}

message GetProductRequest {
  int64 id = 1;
}

message ProductResponse {
  int64 id = 1;
  string name = 2;
  double price = 3;
}
